--- a/adamantine-notes/package.json
+++ b/adamantine-notes/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "http://adamantine-art.github.io/Adamantine-notes",
   "name": "adamantine-notes",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,5 +18,8 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
