--- a/adamantine-notes/package.json
+++ b/adamantine-notes/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "firebase": "^9.20.0",
